# UVLite

./: .gitignore  CMakeLists.txt  README.md  UVLite.gyp  build.sh  clean.sh  compile_xcode.sh
include/: UVLite.h
src/UVLite/: UVLite.c
src/UVLite/util/: util.c  util.h
src/samples/HelloWorld/: AppMain.c  Sample1.c  Sample1.h
src/samples/MySample2/: program.c
src/samples/TCPClient/: MyTCPClient.c
src/samples/TCPServer/: MyTCPServer.c
src/samples/hello_world_cpp/: CMakeLists.txt
